force-app/main/default/objects/CCXR_Restaurant_Employee__c/CCXR_Restaurant_Employee__c.object-meta.xml
<CustomObject>
    <label>CCXR_Restaurant Employee</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>CCXR_Restaurant Emp Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Restaurant Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>