force-app/main/default/objects/CCXR_Restaurant_Employee__c/fields/CCXR_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Aadhar_Number__c</fullName>
    <label>CCXR_Aadhar Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>