force-app/main/default/objects/CCXR_Restaurant_Employee__c/fields/CCXR_Employee_Image__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Employee_Image__c</fullName>
    <label>CCXR_Employee_Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>