force-app/main/default/objects/CCXR_Restaurant_Employee__c/fields/CCXR_Name__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Name__c</fullName>
    <label>CCXR_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>