force-app/main/default/objects/CCXR_Restaurant_Employee__c/fields/CCXR_Phone__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Phone__c</fullName>
    <label>CCXR_Phone</label>
    <type>Phone</type>
</CustomField>