force-app/main/default/objects/CCXR_Restaurant_Employee__c/fields/CCXR_Type_Of_Chef__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Type_Of_Chef__c</fullName>
    <label>CCXR_Type Of Chef</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCXR_Type_of_Employee__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Non-Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>