force-app/main/default/objects/CCXR_Restaurant_Employee__c/fields/CCXR_Type_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Type_of_Employee__c</fullName>
    <label>CCXR_Type_of_Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Restaurant Manager</fullName>
            </value>
            <value>
                <fullName>Front Desk Manager</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Waiter</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>