force-app/main/default/objects/CCXR_Restaurant_Employee__c/validationRules/Name_Should_Be_In_Pascal_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Should_Be_In_Pascal_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(  CCXR_Name__c )),
    NOT(REGEX(CCXR_Name__c , &quot;[A-Z][a-z]*|[A-Z][a-z]*&quot;)),
    NOT(CONTAINS(CCXR_Name__c , &quot; &quot;))
)</errorConditionFormula>
    <errorDisplayField>CCXR_Name__c</errorDisplayField>
    <errorMessage>Name Start With Upper Case Letter</errorMessage>
</ValidationRule>