force-app/main/default/objects/CCXR_Restaurant_Employee__c/validationRules/Validation_Aadhar_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Aadhar_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(CCXR_Aadhar_Number__c , &quot;^[0-9]{4}\\s[0-9]{4}\\s[0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>CCXR_Aadhar_Number__c</errorDisplayField>
    <errorMessage>Please Enter Valid Aadhar Number</errorMessage>
</ValidationRule>