force-app/main/default/objects/CCXR_Restaurant_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Name__c</columns>
    <columns>CCXR_Type_of_Employee__c</columns>
    <columns>CCXR_Type_Of_Chef__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>